--- a/VRChat/08/1026308.html
+++ b/VRChat/08/1026308.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cDySwO9zP+EsnCuHomi+UdbAElzbWm6BaevQI/wblKk="></script>
+    "9NCblmSEQFJ3yeyCLrbyLQDheoVHcBtZQ256PH056cs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"パンジャンドラム","description":"パンジャンドラムの3Dモデルです。\nVRChatのアバターの頭に髪飾りとして付けるために作成しました。回転します。\n改変、商用等、自由にご利用いただけます。\n\n2018/10/16\n高速で回転するアニメーションを追加\n\n2018/10/04\n同梱の回転アニメーションを非レガシーに変更","url":"https://booth.pm/ja/items/1026308","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1026308/c7968f62-6b29-4009-a42f-fc9809dce9d8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cDySwO9zP+EsnCuHomi+UdbAElzbWm6BaevQI/wblKk="></script>
+    nonce="9NCblmSEQFJ3yeyCLrbyLQDheoVHcBtZQ256PH056cs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -442,9 +442,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
