--- a/VRChat/97/1026097.html
+++ b/VRChat/97/1026097.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "EM3BJKW9PSNDNrP+hY/T6WmxpdUzLLBfbdEBNTZM47M="></script>
+    "eFp6kofIpkLgIwFKbBrDGGX+OJ2lrhXSQm2sZJpZKpo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GP-EX とてもいらない刀 MK2 ","description":"謎の素材で構成された刀\nテキトウに使ってね(色変え・改造OK)(配信・ゲームなどにしようもよし)\nでもそのままだったりただ改造しただけで売らないでね？\n12/18 ヴァアアアジョンツーにアップデートしました\nが、やってることはそこまで変わらずデザインとエミッション用のテクスチャがあるだけなのでご了承ください。\n\n\n2019/3/11　更に改良・追加した\n「GP-EX とてもいらない刀 MK2」\nMK2は有料版で500円で配布します\n無料配布版はver2が入ってます\nマテリアルはスタンダードシェーダーで入ってます\nマテリアルから自分好みの色にしてくれると嬉しいです。","url":"https://booth.pm/ja/items/1026097","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/434530f1-ffe2-4303-bcc0-8ff5f4bb9b0f/i/1026097/a845011d-2603-4ccc-831a-b1a7b87fbc4b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EM3BJKW9PSNDNrP+hY/T6WmxpdUzLLBfbdEBNTZM47M="></script>
+    nonce="eFp6kofIpkLgIwFKbBrDGGX+OJ2lrhXSQm2sZJpZKpo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -492,9 +492,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
