--- a/VRChat/23/1025523.html
+++ b/VRChat/23/1025523.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "YwSegs9RXPTUCJ1loo8/L29s+eBe0/DdMvThK5Y1lmY="></script>
+    "ELdrF0NJG8OZuDb/b4hHU0hQRkOyKX3i5wwdRuTxtBI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"晶剣","description":"武器第2弾、今回は水晶をモチーフにした大剣です。サイズ変更すれば普通に剣としても使えるかもしれません。\n\n案の定アニメーション等はありませんが、その分テクスチャは割と頑張ってる方だと思います。特に柄の水晶部分。\nちょっとした工夫もしてあるので、是非実際に手に取って確認してみてください。\n\n今回も、シェーダーの一部にみに様のまんまるしぇーだーver1.2を使わせていただいています。ありがとうございます。\n\n\n仕様\n・ポリゴン数　△3346\n\n・メッシュ毎に基本テクスチャ1枚ずつ（計5枚）同梱。\n\n・Unity Package、FBXファイル、テクスチャ5枚、read meが入っています。\n\n9/26追記\nシェーダーを変更しました。透明感が増しています。\n\n以下、read meより転記\n\n\n利用規約\n当モデルは、Aliciaが作成した剣状の3Dオブジェクトです。\nVRChatやMMD等、ご自由にお使いください。\n\n・個人利用に限り自由。（収益化している動画に映り込む程度の事は問題ありません。）\n\n・テクスチャ、メッシュデータ等の改変利用自由。\n\n\n禁止事項\n\n・無断で当モデルを二次配布する事。商用利用の際はご連絡ください。\n\n・当モデルの製作者であると騙る事。\n\n\n当モデルの使用によって生じるいかなる損害に対して、当方は一切責任を負いません。\n\n何かご連絡、ご質問等がございましたら、以下のアドレスまでお願いします。\n\nGmail : alicia.wlcreation@gmail.com\nTwitter : @Alicia_oekaki","url":"https://booth.pm/ja/items/1025523","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/5043ac6d-805c-41e4-baa7-1837025294e9/i/1025523/93773287-cfb0-4c7d-a9b2-84d1b795f72e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YwSegs9RXPTUCJ1loo8/L29s+eBe0/DdMvThK5Y1lmY="></script>
+    nonce="ELdrF0NJG8OZuDb/b4hHU0hQRkOyKX3i5wwdRuTxtBI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -435,9 +435,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
