--- a/VRChat/34/1025034.html
+++ b/VRChat/34/1025034.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lsVhVTmaDRPnF+woQ80UcJoySNkKvdN3B/Qe+ZDamyM="></script>
+    "c4b7j8aKO+venlpcxBjSau41kCUARKw9ILkFU14kMZI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル「魔導式破砕鎌：壱式」","description":"オリジナル3Dモデル「魔導式破砕鎌：壱式」紹介文及び利用規約\n\n使用者は配布モデルの利用に先立ち、当規約の内容全てに同意をした上で配布物を利用可能なものといたします。\nまた、本モデルデータを購入をした時点で利用規約に同意したものとみなします。\n\n内容物：\n・scythe.fbx\n1メッシュで構成されているモデルデータです。三角ポリゴン数：3914\n\n・魔導式破砕鎌：壱式_prefab\nUnityのシーン上にD\u0026Dをするだけでマテリアルの設定等が完了しているモデルが配置できます。\nデフォルトで刃が回転しているので止めたい方はAnimationコンポーネントのチェックを外してください。\n\n・scythe_DefaultMaterial_AlbedoTransparency.png\n・scythe_DefaultMaterial_MetallicSmoothness.png\n・scythe_DefaultMaterial_Normal.png\n・scythe.mat\nそれぞれのテクスチャとマテリアルです。\n\n・Rotate.anim\n刃を回転させているアニメーションです。blendshape式\n\n・Readme.txt\n本ページに記載している文と同じtxtファイルです。","url":"https://booth.pm/ja/items/1025034","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1025034/80f6d726-61b0-4c9f-bf59-5499c3cabf06_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lsVhVTmaDRPnF+woQ80UcJoySNkKvdN3B/Qe+ZDamyM="></script>
+    nonce="c4b7j8aKO+venlpcxBjSau41kCUARKw9ILkFU14kMZI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -506,9 +506,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
