--- a/VRChat/95/1023695.html
+++ b/VRChat/95/1023695.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ct6+0lZ1XjbuOEQ4EnP2g0giYQh6QMj5Paz9GSBjyDU="></script>
+    "Kr9L6G3DMS2+z89f6GfSUa9q4ZcucyvwOInMtxUav7Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ジャック・オー・ランタン　３Dモデル","description":"このカボチャは主にVRChatでワールドに置いたり、アバターに装着することを想定しています。\n\nポリゴン数は926です。\n\nカボチャの外側と内側部分のオブジェクトが分かれているので暗い所やブルームのかかっているシーンで光らせることができます。\n\n頭をカボチャに差し替えたり、ハロウィンの飾りつけなどに便利です。","url":"https://booth.pm/ja/items/1023695","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1023695/75302408-db43-4333-b63d-724ee93dff32_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ct6+0lZ1XjbuOEQ4EnP2g0giYQh6QMj5Paz9GSBjyDU="></script>
+    nonce="Kr9L6G3DMS2+z89f6GfSUa9q4ZcucyvwOInMtxUav7Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -386,9 +386,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
